--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <br><br>
         <label id="type">I CAN HEAR: </label>
         <br>
-        <label id="accuracy">ACCURACY</label>
+        <label id="accuracy">ACCURACY: </label>
         <br>
         <img height="300" width="300" src="aliens-01.png" id="alienClap">
         <img height="300" width="300" src="aliens-02.png" id="alienSnap">
